short names; defaulting

--- a/config/crd/bases/gitbackup.ebiiim.com_repositories.yaml
+++ b/config/crd/bases/gitbackup.ebiiim.com_repositories.yaml
@@ -12,6 +12,9 @@ spec:
     kind: Repository
     listKind: RepositoryList
     plural: repositories
+    shortNames:
+    - repo
+    - repos
     singular: repository
   scope: Namespaced
   versions:
