--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -18,6 +18,16 @@ rules:
   - update
   - watch
 - apiGroups:
+  - ""
+  resources:
+  - configmaps
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - watch
+- apiGroups:
   - gitbackup.ebiiim.com
   resources:
   - repositories
