--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,7 +14,10 @@ jobs:
         with:
           images: ghcr.io/${{ github.repository_owner }}/gitbackup-controller
           tags: |
-            type=semver,pattern=v{{version}}
+            # v1.2.3-rc.4
+            type=semver,pattern={{raw}}
+            # 1.2.3-rc.4
+            type=semver,pattern={{version}}
       - uses: docker/login-action@v2
         with:
           registry: ghcr.io
@@ -34,7 +37,7 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version-file: go.mod
-      - run: REGISTRY=ghcr.io/${{ github.repository_owner }} ./hack/dist-manifests.sh
+      - run: REGISTRY=ghcr.io/${GITHUB_REPOSITORY_OWNER,,} ./hack/dist-manifests.sh
       - uses: softprops/action-gh-release@v1
         with:
           files: gitbackup.yaml
