--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -30,6 +30,32 @@ rules:
 - apiGroups:
   - gitbackup.ebiiim.com
   resources:
+  - collections
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - gitbackup.ebiiim.com
+  resources:
+  - collections/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - gitbackup.ebiiim.com
+  resources:
+  - collections/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - gitbackup.ebiiim.com
+  resources:
   - repositories
   verbs:
   - create
