--- a/api/v1beta1/testdata/repository/validate_wrong_cron.yaml
+++ b/api/v1beta1/testdata/repository/validate_wrong_cron.yaml
@@ -2,8 +2,8 @@ apiVersion: gitbackup.ebiiim.com/v1beta1
 kind: Repository
 metadata:
   namespace: default
-  name: testrepo-5
+  name: testrepo-x
 spec:
-  src: https://exa ple.com/ rc
+  src: https://example.com/src
   dst: https://example.com/dst
   schedule: "0 6 * *"
