--- a/api/v1beta1/testdata/collection/validate_wrong_url_eq.yaml
+++ b/api/v1beta1/testdata/collection/validate_wrong_url_eq.yaml
@@ -11,6 +11,6 @@ spec:
       dst: https://example.com/dst/foo
     - name: bar
       src: https://example.com/src/barbarbar
-      dst: https://example.com/dst/b rbarbar
+      dst: https://example.com/src/barbarbar
     - src: https://example.com/src/baz
       dst: https://example.com/dst/bazbazbaz
