--- a/api/v1beta1/testdata/repository/validate_wrong_url_eq.yaml
+++ b/api/v1beta1/testdata/repository/validate_wrong_url_eq.yaml
@@ -5,5 +5,5 @@ metadata:
   name: testrepo-x
 spec:
   src: https://example.com/src
-  dst: https://examp e.com/dst
+  dst: https://example.com/src
   schedule: "0 6 * * *"
