--- a/api/v1beta1/testdata/collection/validate_all.yaml
+++ b/api/v1beta1/testdata/collection/validate_all.yaml
@@ -15,10 +15,10 @@ spec:
     name: piyo
   repos:
     - name: foo
-      src: https://example.com/foo
-      dst: https://example.com/foo
+      src: https://example.com/src/foo
+      dst: https://example.com/dst/foo
     - name: bar
-      src: https://example.com/barbarbar
-      dst: https://example.com/barbarbar
-    - src: https://example.com/baz
-      dst: https://example.com/bazbazbaz
+      src: https://example.com/src/barbarbar
+      dst: https://example.com/dst/barbarbar
+    - src: https://example.com/src/baz
+      dst: https://example.com/dst/bazbazbaz
