--- a/api/v1beta1/testdata/collection/validate_wrong_url_src.yaml
+++ b/api/v1beta1/testdata/collection/validate_wrong_url_src.yaml
@@ -7,10 +7,10 @@ spec:
   schedule: "0 6 * * *"
   repos:
     - name: foo
-      src: https://example.com/foo
-      dst: https://example.com/foo
+      src: https://example.com/src/foo
+      dst: https://example.com/dst/foo
     - name: bar
-      src: https://example.com/b rbarbar
-      dst: https://example.com/barbarbar
-    - src: https://example.com/baz
-      dst: https://example.com/bazbazbaz
+      src: https://example.com/src/b rbarbar
+      dst: https://example.com/dst/barbarbar
+    - src: https://example.com/src/baz
+      dst: https://example.com/dst/bazbazbaz
