--- a/config/crd/bases/gitbackup.ebiiim.com_collections.yaml
+++ b/config/crd/bases/gitbackup.ebiiim.com_collections.yaml
@@ -12,6 +12,9 @@ spec:
     kind: Collection
     listKind: CollectionList
     plural: collections
+    shortNames:
+    - coll
+    - colls
     singular: collection
   scope: Namespaced
   versions:
